// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-1 {
  background-color: #fff;
  color: #000;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: 2px;
}

.emotion-1 .components-card-body {
  max-height: 80vh;
}

.emotion-3 {
  height: 100%;
}

.emotion-5 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-5:first-of-type {
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
}

.emotion-5:last-of-type {
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-7 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 1px 2px 0 rgba(0 ,0, 0, 0.05);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-7 {
    transition-duration: 0ms;
  }
}

.emotion-9 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 5px 10px 0 rgba(0 ,0, 0, 0.25);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-9 {
    transition-duration: 0ms;
  }
}

<div
  class="components-surface components-card emotion-0 emotion-1 emotion-2"
  data-wp-c16t="true"
  data-wp-component="Card"
>
  <div
    class="emotion-3 emotion-2"
  >
    <iframe
      aria-hidden="true"
      frameborder="0"
      src="about:blank"
      style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
      tabindex="-1"
    />
    <div
      class="components-card__body components-card-body emotion-5 emotion-2"
      data-wp-c16t="true"
      data-wp-component="CardBody"
    >
      Code is Poetry
    </div>
  </div>
  <div
    aria-hidden="true"
    class="components-elevation emotion-7 emotion-2"
    data-wp-c16t="true"
    data-wp-component="Elevation"
  />
  <div
    aria-hidden="true"
    class="components-elevation emotion-9 emotion-2"
    data-wp-c16t="true"
    data-wp-component="Elevation"
  />
</div>
`;

exports[`props should render label 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,12 +1,12 @@
  <div
-   aria-label="show"
+   aria-label="flyout-base-flyout"
    class="components-flyout-content components-flyout css-1b8wigk-FlyoutContentView e1vtu5161"
    data-dialog="true"
    data-wp-c16t="true"
    data-wp-component="Flyout"
-   id="labelled-flyout"
+   id="base-flyout"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%; max-width: 360px;"
    tabindex="-1"
  >
    <div
`;

exports[`props should render without content 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,12 +1,12 @@
  <div
-   aria-label="flyout-contentless-flyout"
+   aria-label="flyout-base-flyout"
    class="components-flyout-content components-flyout css-1b8wigk-FlyoutContentView e1vtu5161"
    data-dialog="true"
    data-wp-c16t="true"
    data-wp-component="Flyout"
-   id="contentless-flyout"
+   id="base-flyout"
    role="dialog"
    style="position: fixed; left: 100%; top: 100%; max-width: 360px;"
    tabindex="-1"
  >
    <div
@@ -22,10 +22,17 @@
          frameborder="0"
          src="about:blank"
          style="display: block; opacity: 0; position: absolute; top: 0px; left: 0px; height: 100%; width: 100%; overflow: hidden; pointer-events: none; z-index: -1;"
          tabindex="-1"
        />
+       <div
+         class="components-card__body components-card-body css-1lr0m0h-View-Body-borderRadius-medium em57xhy0"
+         data-wp-c16t="true"
+         data-wp-component="CardBody"
+       >
+         Code is Poetry
+       </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation css-1b4rkmt-View-Elevation-sx-Base-elevationClassName em57xhy0"
        data-wp-c16t="true"
`;
